# hermes-guardian

./: .gitignore  README.md  config.example.yaml  config.yolo26.example.yaml  pyproject.toml
packaging/: hermes-guardian.service
skills/hermes-guardian/: SKILL.md
skills/hermes-guardian/agents/: openai.yaml
src/hermes_guardian/: __init__.py  cli.py  config.py  detection.py  guardian.py  notify.py  presence.py  recognition.py  state.py
tests/: test_config.py  test_detection.py  test_guardian_state.py  test_notify.py  test_presence.py  test_recognition.py  test_state.py
