[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-guardian"
version = "0.1.0"
description = "Phone-presence and camera guardian mode for Hermes-style local agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nitish" }]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
face = ["face-recognition>=1.3.0"]
full = ["ultralytics>=8.3", "face-recognition>=1.3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
guardian = "hermes_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
